<resources>
    <string name="app_name">Flappy Cage</string>
    <string name="title_activity_login_view">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="jogar">Jogar</string>
    <string name="flappycage">FlappyCage</string>
    <string name="score">Score</string>
    <string name="trocar_jogador">Trocar Jogador</string>

    <string name="game_btn_jump">⬆️</string>
    <string name="game_fps">~30 fps</string>
    <string name="game_score">0</string>
</resources>
