<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_night"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/btn_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/game_btn_jump"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />


    <ImageView
        android:id="@+id/imageView_bLimit"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@android:drawable/screen_background_dark" />

    <ImageView
        android:id="@+id/imageView_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/perdonagem_idle_0" />

    <SeekBar
        android:id="@+id/seekBar_gameSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="200"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <ImageView
        android:id="@+id/imageView_pipe_0_t"
        android:layout_width="64dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <ImageView
        android:id="@+id/imageView_pipe_1_b"
        android:layout_width="64dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_bLimit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <ImageView
        android:id="@+id/imageView_pipe_0_b"
        android:layout_width="64dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_bLimit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <ImageView
        android:id="@+id/imageView_pipe_2_b"
        android:layout_width="64dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_bLimit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <ImageView
        android:id="@+id/imageView_pipe_1_t"
        android:layout_width="64dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <ImageView
        android:id="@+id/imageView_pipe_2_t"
        android:layout_width="64dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/textView_fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_fps"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_score"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />


</androidx.constraintlayout.widget.ConstraintLayout>